cluster/apps/storage/rook/dashboard-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`rook.bharris.xyz}`) && PathPrefix(`/ceph`)
      services:
        - kind: Service
          name: rook-ceph-mgr-dashboard
          port: 8555
          namespace: rook-ceph
  tls:
    secretName: "${SECRET_CERT}"
